fix some overflow issues with large data

--- a/site.css
+++ b/site.css
@@ -272,12 +272,15 @@ canvas.item:hover {
     display: flex;
     flex-flow: column nowrap;
     height: 500px;
+    max-width: 410px;
 }
 #glyph-data dl { margin: 0; }
 #glyph-data dt { float: left; }
 #glyph-data dd { margin-left: 12em; }
 
-#glyph-contours {
+#glyph-contours,
+#glyph-substitutions,
+#glyph-path {
     flex: 1 1 0;
     overflow: auto;
 }
